# sec-audit

./: .gitignore  CHANGELOG.md  PUBLISHING.md  README.md  SECURITY.md  conftest.py  pyproject.toml
.github/scripts/: smoke_wheels.py
.github/workflows/: ci.yml
demo/: manage.py
demo/demo/: settings.py  urls.py
demo/fintech/: admin.py  apps.py  audit_events.py  models.py  seed.py  traffic.py  urls.py  views.py
demo/fintech/api/: serializers.py  urls.py  views.py
demo/fintech/management/commands/: generate_audit_demo_events.py  seed_fintech_demo.py
demo/fintech/migrations/: 0001_initial.py  0002_seed_initial_data.py
demo/fintech/static/fintech/: style.css
demo/fintech/templates/fintech/: index.html
demo/monitoring/: README.md  docker-compose.yml
demo/monitoring/alloy/: config.alloy
demo/monitoring/grafana/dashboards/: sec-audit-overview.json
demo/monitoring/grafana/provisioning/dashboards/: dashboards.yml
demo/monitoring/loki/: queries.md
docs/components/: core.md  dashboard.md  demo.md  django.md  handlers.md  integrations.md  packaging.md  testing.md
examples/alloy/: file-to-loki.alloy  stdout-to-loki.alloy
examples/docker-compose/: compose.yml
examples/grafana/: dashboard.json
examples/logql/: examples.md
tests/: test_config.py  test_config_validation.py  test_import_boundaries.py  test_ip.py  test_packaging_boundaries.py  test_projection_contract.py  test_scrubbers.py  test_state.py
