[project]
name = "sec-audit-workspace"
version = "0.0.0"
description = "Monorepo workspace for the sec-audit distributions. Not published."
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
  "packages/sec-audit",
  "packages/sec-audit-logging",
  "packages/sec-audit-rules",
  "packages/django-sec-audit",
  "packages/django-sec-audit-enforcement",
]

[tool.uv.sources]
sec-audit = { workspace = true }
sec-audit-logging = { workspace = true }
sec-audit-rules = { workspace = true }
django-sec-audit = { workspace = true }
django-sec-audit-enforcement = { workspace = true }

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["demo"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]
python_files = ["test_*.py"]
addopts = "-ra"

[dependency-groups]
dev = [
  "build>=1.2",
  "playwright>=1.44",
  "pytest>=8",
  "ruff>=0.8",
  "twine>=5.0",
  "sec-audit[dev]",
  "sec-audit-logging[dev]",
  "sec-audit-rules[redis,dev]",
  "django-sec-audit[full,dev]",
  "django-sec-audit-enforcement[dev]",
  "django-auditlog>=2.0.0",
  "djangorestframework>=3.15",
  "httpx>=0.28.1",
  "pytest-django>=4.12.0",
  "redis>=5.0",
  "fakeredis[lua]>=2.21",
]
